--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PT'
 - !lcsh 'Dutch fiction'
+- GITenberg
 title: 'Korte Arabesken: Bébert le Boucher en André le Pêcheur'
 url: http://www.gutenberg.org/ebooks/17431
